// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders link if provided 1`] = `
<p
  className="flex text-gray-600 items-center"
>
  <svg
    aria-hidden="true"
    className="mr-1 h-5 w-5"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
      fillRule="evenodd"
    />
  </svg>
  <a
    className="text-blue-600 underline underline-offset-1 visited:text-purple-600"
    href="https://google.com"
  >
    Building
  </a>
</p>
`;

exports[`it renders location provided 1`] = `
<p
  className="flex text-gray-600 items-center"
>
  <svg
    aria-hidden="true"
    className="mr-1 h-5 w-5"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
      fillRule="evenodd"
    />
  </svg>
  Building
</p>
`;
